@@ -1,5 +1,7 @@
 new
   * Added timeline plot showing populations of the countries (with option -T)
+  * Install changelog.gz
+  * Some installation fixes in Makefile
 
 version 1.1.7 2013-07-22
   * Icons 32x32 and 16x16
